スマホに対応

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Marco's Documents Index</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -18,7 +19,7 @@
     <h2>ページリスト</h2>
     <p>多分メンテされないので気をつけて。</p>
     <ul>
-        <li><a href="https://marco3jp.github.io/documents/sample/">サンプルページ</a></li>
+        <li><a href="./sample/">サンプルページ</a></li>
     </ul>
     <script src="theme.js"></script>
 </div>
