deploy: 76628bb6ab4d55c78931e47887fe5b533e52f08f

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 </p>
 <p>特に文書(HTML)ではなく、このページに使っているCSSやJSといった部分については批判的であれ参考にでも、ぜひ見ていただきたいと思っています。</p>
 <h2>ページリスト</h2>
-<p>多分メンテされないので気をつけて。</p>
-<ul>
-    <li><a href="sample/">サンプルページ</a></li>
-</ul>
+<p><a href="list.html">ここ</a>に自動生成されるようになりました🎉　まだただのリストなので、日時とかタグとか色々使って便利にしたいですね。</p>
 
     <script src="theme.js"></script>
 </div>
