--- a/scripts/runtime/index.html
+++ b/scripts/runtime/index.html
@@ -21,7 +21,7 @@
             document.querySelector("#menu").classList.toggle("open")
         })
     </script>
-    <!--script type="module" src="src/assets/theme.js"></script-->
+    <script type="module" src="src/assets/theme.js"></script>
     <script type="module" src="/src/main.ts"></script>
 </div>
 </body>
