--- a/diary/2021-05-02-015000.html
+++ b/diary/2021-05-02-015000.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>のーたいとる</title>
+    <title>のーたいとる（2021-05-03版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="">のーたいとる</h1>
+    <h1 id="20210503">のーたいとる（2021-05-03版）</h1>
 <p>最近生きることについて考えることが多くて、そもそも私は生きたくて生きているんだか、生きているから仕方がなくやりたいな～って思ったことをやってるんだかよくわからない。</p>
 <p>この話をすると多分反出生主義的な方向に進むと思うので深入りはしないとしても、少なくとも生きたいな～って望んで生まれようとした記憶はないので、なんか生まれちゃったとして話を進めていく。</p>
 <p>じゃあ生きているのを早く終わったほうがいいじゃんって話になると思うけど、別にこの世界が嫌いなわけじゃなくて、クソめんどくさいことだらけだし生きていたいとはあんまり思わないけど、それでも面白いことはあると思っている。</p>
