deploy: 18cd52dc30eaaffaaaa685bc70f3165d148bce31

--- a/diary/2021-03-31-011430.html
+++ b/diary/2021-03-31-011430.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-03-31版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210331">のーたいとる（2021-03-31版）</h1>
-<h2 id="">おはよう</h2>
+    <h1 id="のーたいとる（2021-03-31版）">のーたいとる（2021-03-31版）</h1>
+<h2 id="おはよう">おはよう</h2>
 <p>そろそろ寝るよ</p>
-<h2 id="-1">少しずつ趣味プロを取り戻すよ</h2>
+<h2 id="少しずつ趣味プロを取り戻すよ">少しずつ趣味プロを取り戻すよ</h2>
 <p>今の毎日は死にかけなので、私が私である理由を取り戻すために趣味プロを頑張っていこうと思うよ。もちろんお仕事も頑張るよ。</p>
 <h2 id="marco3jpconfig">marco3jp.config</h2>
 <ul>
@@ -23,8 +24,9 @@
   isBaby: true, // keeping current stuff xd
 }
 </code></pre>
-<h2 id="-2">趣味プロ</h2>
+<h2 id="趣味プロ">趣味プロ</h2>
 <p>今はここのエディタ実装中。少しずつしか歩けてないのと自分向けの部分を作っているので、多分見る人にとっては最後まで微妙にUIが変わるだけで関係がないと思う。ぼくがぼくを褒めていかないとモチベがががが</p>
+
     <script src="../theme.js"></script>
 </div>
 </body>
