--- a/diary/2021-07-02-232600.html
+++ b/diary/2021-07-02-232600.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-07-02版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210702">のーたいとる（2021-07-02版）</h1>
+    <h1 id="のーたいとる（2021-07-02版）">のーたいとる（2021-07-02版）</h1>
 <p>何が書きたいかあんまり考えてないけど言葉を出したいと思ったので書くよ。ちなみにこの文章はあちこちオードリーを見ていて言葉を書きたいと思ったから書き始めた。</p>
 <p>ここ最近、少しずつ背伸びができるようになった気がしている。でもなんか、背伸びであって、ジャンプじゃないんですよね。これをなんと例えようか。ある程度狭い台座に乗っかると背伸びは結構できるけど、ジャンプは怖くて絶対できないみたいな、そういう怖さ。</p>
 <p>状況としては昨年の冬くらいに一人暮らしを初めて、4月から仕事が始まって、どっちもがんばろう！みたいな気持ちになっているところ。その中でこういう気持ちになっている。</p>
@@ -17,7 +18,7 @@
 <p>久しぶりに文章を書いているのでなんか支離滅裂な展開になっているところがあっていいですね（？）</p>
 <p>閑話休題。話を戻して背伸びの話だ。</p>
 <p>ジャンプではないと言っているんだけど、それは今の想像する将来の姿であって、本当は手を伸ばすみたいな感じなんじゃないかなと思っている。</p>
-<p>"こうなりたい"があって、そこに届けと背伸びして手を伸ばすような感じ。危ない足場でジャンプを繰り返していつ落ちるかをチキンレースしたいわけじゃない。</p>
+<p>&quot;こうなりたい&quot;があって、そこに届けと背伸びして手を伸ばすような感じ。危ない足場でジャンプを繰り返していつ落ちるかをチキンレースしたいわけじゃない。</p>
 <p>仮にそうしないといけないなら世界は嫌いだ。</p>
 <p>何が書きたいのかよくわからなくなっちゃったな。そうだ、話をまた変えてみよう。</p>
 <p>書きたい話はあるはずなんだけど、オチっていうか何もないただの話って感じなんだよね。というかもはや言葉、みたいな。</p>
@@ -28,11 +29,11 @@
 <p>こうなりたいからこうする、みたいな動線がなにもない。ああいやこれも違う。どうなりたい？ってところから。</p>
 <p>あ～私はどうなりたいんだろう。何をしたいんだろう。私に世界を変えられるんだろうか。</p>
 <p>『やってみなくちゃわからない、わからなかったらやってみよう』って強いけど、何がわかりたいのかわからないってそれを上回ってくるんすよね。</p>
-<p>"私がどうなりたいか"なんて私以外にわかるはずもなくて、私もわからなくて、何？？？？</p>
+<p>&quot;私がどうなりたいか&quot;なんて私以外にわかるはずもなくて、私もわからなくて、何？？？？</p>
 <p>文章を書いてみると割と整理できるし、いい言葉が出てきて私が大好きになる。好きなのはわかったけど何も解決しとらんのだぞ、勝手にいちゃいちゃするな💢</p>
 <p>なんか人は良くも悪くも惰性で死ねるっていうか、無意味な時をただ過ごして有象無象の一人として一生を終えることだって可能だと思うんですよ。</p>
 <p>いろいろな発展で今の時代はただ楽しい時間を過ごせるようになっていて、もはや社会が安楽死装置みたいなものじゃないかとすら言える気すらする。</p>
-<p>でもそれは本当にいいことなのかよくわからなくて、楽しんで死にたいんじゃなくて満足して死にたいなあって気持ち "も" ある。</p>
+<p>でもそれは本当にいいことなのかよくわからなくて、楽しんで死にたいんじゃなくて満足して死にたいなあって気持ち &quot;も&quot; ある。</p>
 <p>じゃあどうしたら満足した人生を送れるのかなあ、っていうのが多分私に限らずたくさんの人々を苦しめてきた悩みなんじゃないかなというところに文章を書きながらたどり着いてしまった。</p>
 <p>なんてこった、人生哲学みたいな話をしているな。こんなつもりではなかったんだけど……。（本当か？）</p>
 <p>Marco3jpによる一人会話、いつまでも続きそうなんだけどどうなっているんだこれ。</p>
@@ -52,6 +53,7 @@
 <ul>
 <li>のーたいとる</li>
 </ul>
+
     <script src="../theme.js"></script>
 </div>
 </body>
