--- a/diary/2021-07-18-205400.html
+++ b/diary/2021-07-18-205400.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-07-18版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210718">のーたいとる（2021-07-18版）</h1>
+    <h1 id="のーたいとる（2021-07-18版）">のーたいとる（2021-07-18版）</h1>
 <p>酒の話をします。</p>
 <p>RTDというか、いわゆるサクッと飲めるアルコールとそうじゃない重めの酒（度数とか）についてで、普通に生活する上だとやっぱり前者のほうが便利だよな〜って思うところがある。</p>
 <p>というのも、チューハイとかって3~10%くらいで350mlとか500ml単位で買えるのに対して、例えば日本酒だと15%以上で700mlあたりが最低ラインのものも多いんですよね。これはワインも同じだと思います。</p>
@@ -23,6 +24,7 @@
 <p>これって自分だけの悩みなのか、それともお酒好きだとわかってもらえるのか、どうなんでしょう。高価なものになるとこういう露骨な好みから外れるものは減るのかなあ。</p>
 <p>製造過程がめちゃくちゃシビアだと思うので、好みの問題なのかその製造上の品質の問題なのか、他に何かの問題なのかとか、切り分けも難しいしな〜ってなっちゃう。</p>
 <p>書きたいこと書いたのでおわり</p>
+
     <script src="../theme.js"></script>
 </div>
 </body>
