--- a/diary/2021-07-23-225000.html
+++ b/diary/2021-07-23-225000.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-07-23版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210723">のーたいとる（2021-07-23版）</h1>
+    <h1 id="のーたいとる（2021-07-23版）">のーたいとる（2021-07-23版）</h1>
 <p>多様性って、多様性について語っているうちは多様性になれないというか、多様であることと多様でないことは表裏一体であって同時にあれないのに、多様であるためには両面満たすべきでは？という疑問がある。</p>
 <p>もちろん理不尽に処遇を変えられるみたいなことがあってはいけないし、それぞれがそれぞれとして存在するべきだと思っているんだけど、多様じゃないといけないよね！多様が正しいよ！ってなってしまった世界では個が尊重されるよりもカテゴライズが尊重されるんだろうなという気持ち。</p>
 <p>オリンピック開会式見てるんですけど、なんかこの規模の国際イベントで政治とかいろいろを表舞台から消そうとする気持ちはすごいなあと思う。</p>
@@ -23,6 +24,7 @@
 <p>昨日ここまでのグダグダを思い返して『人は過ちを繰り返す』がぴったりだなあ……っていう気持ちになっていた。</p>
 <p>多分あんまり競技自体は見ないけど、こういうイベントが日本で今日から始まったんだなあ、決まったときからもう長い時が経ったなあ、って歴史を刻んだ気分でした。</p>
 <p>終わり。</p>
+
     <script src="../theme.js"></script>
 </div>
 </body>
