--- a/ss/2021-08-02-204300.html
+++ b/ss/2021-08-02-204300.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>ショートストーリー（2021-08-02）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210802">ショートストーリー（2021-08-02）</h1>
+    <h1 id="ショートストーリー（2021-08-02）">ショートストーリー（2021-08-02）</h1>
 <p>「このイベントは我々のゲリラ対象となった。あの部屋に五分ほど滞在してもらい、その後は開放するだけなので安心してもらいたい」</p>
 <p>社会をさらなる混乱に貶めるのにはたった五分でよかった。三年が経ち、一層強力に、一層感染力が強まった新型コロナウイルスの感染者さえいれば。</p>
-<hr />
+<hr>
 <p>「都内で行われた大規模イベントの会場で、テロ事件が発生したとの情報が入ってきました。しかし犯人グループは危害を加える様子はなく、現場にいたイベント参加者は五分ほどで開放されたとのことです」</p>
 <p>「テロ事件の詳細が先程記者会見で明らかになり、密室に五分ほどの滞在を指示されたとのことです。密室内には犯人グループと思われるメンバーが数名マスクをせずにいたとのことで、メンバーの検査を早急に行うとしています」</p>
 <p>「犯人グループからの声明が発表されました。密室に滞在していたメンバーは陽性者であり、意図して配置したとのこと。今後もランダムなイベントにゲリラ行為を行うとした上で次のように述べました」</p>
@@ -30,7 +31,7 @@
 <p>スーパーのような身近な場所でも少しずつテロ行為が発生し始めた頃、転機を迎えることになった。</p>
 <p>「えー、先程成立した法律に基づいて、来週から一ヶ月のロックダウンを行うこととなりました。なお、その段階でも感染者数が存在する場合は延長することになります」</p>
 <p>すでに破壊された社会を前にして、人々を守るためのロックダウンを決行することになった政府。その一線で守ってきた社会は、どこにあるのだろうか。</p>
-<h2 id="">あとがき</h2>
+<h2 id="あとがき">あとがき</h2>
 <p>オチが激弱ですまん。ていうかオチを考えてなくて、思いつきで書き始めたので途中とかネタの箇条書きみたいになってたし意味わからんな。</p>
 <p>まあでもなんか、色々思うところはありつつネタにできたかな～って感じ。念の為に言っておくと現実世界のどこかの国の政府とか関係ないですよ。これはあくまで筆によって描かれたものです。</p>
 <p>そもそもが五分で感染するか知ったことではないんだけど、正直してもしなくてもどっちでもいいというか、するかもしれない状況に攻撃的に配置されたら恐怖でしかないじゃん。</p>
@@ -41,6 +42,7 @@
 <p>頼むからまじでもう変異しないでほしいよね。なんでこんなことになるんだよ～（ドロシー）</p>
 <p>もしくは、めちゃくちゃ感染力強いし他の新型コロナ株を上書きしてくるけどまっっっっっっっったく症状が出ないスペシャル株が出てきて、それの抗体で他の株にも効いて来年以降ワクチンもいらないしスペシャル株にかかれば勝ち！みたいになってほしい。</p>
 <p>ということで終わります、SSでした。</p>
+
     <script src="../theme.js"></script>
 </div>
 </body>
