--- a/diary/2021-03-05-044100.html
+++ b/diary/2021-03-05-044100.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-03-05版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210305">のーたいとる（2021-03-05版）</h1>
+    <h1 id="のーたいとる（2021-03-05版）">のーたいとる（2021-03-05版）</h1>
 <blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr">寝るかといいつつ色々調べものをしていて、権利というものを意識するインターネットになってよかったんだよな、よかったんだよな？っていうすごく悩ましい思いになっている</p>&mdash; Marco (@Marco_utau) <a href="https://twitter.com/Marco_utau/status/1367552256363491331?ref_src=twsrc%5Etfw">March 4, 2021</a></blockquote>
+
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <p>これの話。私が最初にインターネット文化的なものに触れたのはうごくメモ帳。棒人間やらひとり声変え掛け合い、歌ってみたも書いてみたも見てたと思う。ここはまあ、厳密にはアウトなものもあったけど、オリジナルコンテンツの比重が高かったかも。</p>
-<p>んでニコニコ動画。権利の闇鍋みたいな場所。アイマスもニコマスからハマったし、I'veも超会議 -&gt; ニコニコ動画上の作業用BGMと題した違法溶接職人による動画からハマった。</p>
+<p>んでニコニコ動画。権利の闇鍋みたいな場所。アイマスもニコマスからハマったし、I&#39;veも超会議 -&gt; ニコニコ動画上の作業用BGMと題した違法溶接職人による動画からハマった。</p>
 <p>ニコニコ動画についてはまだまだある。ボカロから生まれたN次創作、厳密に権利を守っていたものはどれだけあったんだろう。でもボカロ界隈じゃこの権利の侵害は普通だと思う。これは今でも思うし、侵害されたと思っていた人は皆無なんじゃないのかな。オケ使ってくれって、ピアプロとか斧に投げてたよね。</p>
 <p>合唱的なやつだって勝手につなげていたものは多いし、音MADやらその他権利なんて言葉を前世に置いてきたみたいな作品ばっかだと思う。</p>
 <p>にこさうんどやらにこみみやら、グレーっていうか黒いサービスもおかしいけどおかしくない、っていうすげー闇の世界。</p>
@@ -28,6 +31,7 @@
 <p>インターネットには嘘ばっかりだなんて思って生きてきたんですから。嘘書いて捕まる世界と同じわけがないんですよ。</p>
 <p>アンダーグラウンドな世界は確かに誰かにとって最悪かもしれないんだけど、誰かにとっては最高だったりしてさ、どっかにアンダーグラウンドがあって、寛容でいてくれたらいいのにななんて思ったりしたんだよ。</p>
 <p>夢の中で生きていたいなあ。</p>
+
     <script src="../theme.js"></script>
 </div>
 </body>
