--- a/diary/2021-05-11-025200.html
+++ b/diary/2021-05-11-025200.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-05-11版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210511">のーたいとる（2021-05-11版）</h1>
+    <h1 id="のーたいとる（2021-05-11版）">のーたいとる（2021-05-11版）</h1>
 <p>あさ～なわけないだろ3時になるんだぞ。書きたいことがあったので書く。細かい経緯とかは <a href="https://twilog.org/Marco_utau/date-210511">twilogの2021-05-11あたり</a> を見てください。</p>
 <p>小中学生の頃は一応野球をやっていたこともあって運動はしていたし、多分今も運動自体が嫌いなわけじゃなくて、むしろどっちかというと好きな方だと思う。</p>
 <p>そんなことはどうでもよくて、小中学生の頃の自分に対してかわいそうだな、みたいな思いを抱いて、子育てというか、学ばせるということについてすごく思いがあって、そこに貢献したいという思いがある。</p>
@@ -18,7 +19,7 @@
 <p>んでそこまではだいたいツイッターに書いたとおりなんだけど、何を書きたかったんだっけ？</p>
 <p>ちょっと書きたかったことを思い出せないので、雑に私的な考え方を書くと、成長を支えるのは可能性を与えることと知的好奇心の後押しにあると思っている。</p>
 <p>なので根本的に、成長を支える側はたくさんの知見を有していて、何を与えれば成長を支えることができるのか判断する必要があるんじゃないかと思う。（仮にそれが雑多に与える、でも正しいと判断したならそれでいいと思う）</p>
-<p>んで、私が小学生で覚えているのは理科が面白かった話で、元素周期表を覚えていたところで誰もアシストしてくれなかったのは"お勉強"に対する好奇心を失った大きなきっかけなんだろうと思う。</p>
+<p>んで、私が小学生で覚えているのは理科が面白かった話で、元素周期表を覚えていたところで誰もアシストしてくれなかったのは&quot;お勉強&quot;に対する好奇心を失った大きなきっかけなんだろうと思う。</p>
 <p>その後もコンピュータにハマったと思ったら時間制限(+当時の自分は野球部で夜しかPCに触れなかった(なんだか辞めることは悪いことだ、みたいなコミュニティ感はあった気がする))だった。</p>
 <p>当時、本は高いから買えないよねという思いを感じ取ったのは今でも鮮明に覚えているし、本が買えないなら子供を作るべきではないし、教育の重要性すら知らずに子供を作るべきではないと今では思う。</p>
 <p>その思いはMarcoという高速増殖炉によって、『親のための子供ではなく、未来のための子供であれ』という思いに変わった。</p>
@@ -28,13 +29,14 @@
 <p>内容がポジティブじゃないし、親に対する批判ばかりでリスペクトが足りんというのはそうなんだけど、私としては何も間違っていないと思うので、ぜひ筆には筆でなにかアクションがほしいという限りだ。</p>
 <p>30分ちょっとかけて書いたらしいんだけど、言いたいことがまとまってないとかでミクロな推敲は一周だけしたけど微妙なので、気が向いたらこの話は再度しっかり書きたい気がする。まあ、多分気が向かないんだけど……。</p>
 <p>過去の境遇について反省的に活用するのは別にいいけれど、知を使って暴力的な憂さ晴らしをするのはよくなかったですね。</p>
-<hr />
+<hr>
 <p>それでも明日はやってくるし、明日は私が描くものなので、できることならいい未来を描きたい。</p>
 <p>私にできる限りを尽くせるように、ここで眠りにつくことにしようか。</p>
 <h2 id="tags">tags</h2>
 <ul>
 <li>のーたいとる</li>
 </ul>
+
     <script src="../theme.js"></script>
 </div>
 </body>
