--- a/diary/2021-07-19-002600.html
+++ b/diary/2021-07-19-002600.html
@@ -5,34 +5,36 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>のーたいとる（2021-07-19版）</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="20210719">のーたいとる（2021-07-19版）</h1>
+    <h1 id="のーたいとる（2021-07-19版）">のーたいとる（2021-07-19版）</h1>
 <p>昨日に続いて２日連続！流石にまだ寝てないので論理同日！</p>
 <p>さあここではMarco3jpに関する話をしていきますわよ〜！（Marco3jpお嬢様）</p>
 <p>Marco3jpというのはIDで概念みたいなもので、Marcoというのが実体ってイメージ。</p>
 <p>現実世界にいる自分もMarcoなんだけど、Marco3jpはその物体というよりかはバックボーンにいるみたいな感じ。言っててよくわからん。</p>
 <p>あとここで書くのは <strong>負の面</strong> なので、普通に自己紹介として提示するものはなんか改めて書きます（既存の自己紹介だと最新かチェックできてないのでリンク貼りにくい）</p>
-<h2 id="">特徴</h2>
+<h2 id="特徴">特徴</h2>
 <p>†††xXx限界xXx†††を煮詰めた特徴です。</p>
-<h3 id="-1">自分が好き</h3>
+<h3 id="自分が好き">自分が好き</h3>
 <p>私は私が好き。私が私を好きにならないと、私を好きでいてくれる人がいなくなってしまうから。</p>
 <p>これが私のキャラクター設定であり実際にそう思っていることです。私が私を好きでいることで私を守っているという感じ。</p>
-<h3 id="-2">自分と他人の境目が滑落注意</h3>
+<h3 id="自分と他人の境目が滑落注意">自分と他人の境目が滑落注意</h3>
 <p>自分は自分なので制御できる脳のすべてを知っているんだけど、他人の脳はそもそも制御できないので、何があっても自分よりも確実な他人は存在しないという考えを持っている。</p>
 <p>ただそもそも、他人との交流がないので他人の境目を論理的ではなく実体験として認識したことはない。何だお前。</p>
-<h3 id="-3">破滅的な思考</h3>
+<h3 id="破滅的な思考">破滅的な思考</h3>
 <p>すべてを滅ぼそうとする思考がたまに働く。当たり前のように校舎から飛び降りようとする妄想をするので危険性高め。</p>
 <p>たまにくるけどわかりやすいっちゃわかりやすいので、あ〜メンタルやられとるなって気持ちになる。</p>
-<h3 id="-4">自己中心的</h3>
+<h3 id="自己中心的">自己中心的</h3>
 <p>先述したところでなんとなく想像はつくと思うけど自分と他人の境目はあるし自分が大好きなので、価値判断の中心は常に自分。</p>
 <p>ただ誤解をしてほしくないのは、自分のための他人の利益は喜んで受ける。他人だけ利益を受けて自分は消耗するなんてのが嫌いなだけで、自分も他人も利益を受ければいい。</p>
 <p>レクリエーションやりましょうってなったときに自分が好きじゃないものだと、流石に露骨に出すことはないけどクソめんどくさいなあって思ってる感じ。</p>
-<h2 id="-5">あとがき</h2>
+<h2 id="あとがき">あとがき</h2>
 <p>衝動的に書いた怪文書、これぞのーたいとる！って感じ。</p>
 <p>でも『私が私を好きにならないと、私を好きでいてくれる人がいなくなってしまうから』ってところは本当に私生活で思っていることで、私の思想の根幹にあると思う。</p>
 <p>私は私を捨てられないので、私を好きでいて、私を誰よりも理解して、私を導かないといけないんですよ。</p>
+
     <script src="../theme.js"></script>
 </div>
 </body>
