deploy: 0b46da773ee3bd103b99110eab68b6d96f949054

--- a/preparing-for-MU2022.html
+++ b/preparing-for-MU2022.html
@@ -39,6 +39,8 @@
 <p>なくてもいいけど多分みんな持ってる。<br>意外とみんな写真とか映像を撮ったりしているし、タイムテーブル確認するとか、最高！！！ってツイートするとかShazamするとか、結構使いみちは多いので大事です。</p>
 <h4 id="バッテリー">バッテリー</h4>
 <p>なんだかんだイベントが5, 6時間とかなので、端末によってはバッテリーがあると嬉しいかもしれないです。でも難しいことに割とバッテリーは重いし、ケーブルも邪魔です。<br>なので普段遣いのバッテリーにもよりますが、5000mAhとかそれ以下の小さいバッテリーと、10cmくらいのケーブルを買っておくとよさそうな感じだと思います。</p>
+<h3 id="メガネストッパー">メガネストッパー</h3>
+<p>メガネをしている場合、普段より激しく動くので眼鏡がずれやすかったりします。<br>スポーツ向けにつるの先端に取り付けるストッパーが市販されているので、これをつけると比較的ズレにくくなります。<br>異常な動きをしない限り、少なくとも飛んでいったりはほぼしなくなるはずなので安全のためにもあるといいかなと思います。</p>
 <h2 id="服装">服装</h2>
 <p>おしゃれしてもしなくてもいいと思いますが、後述するように靴はちゃんとしたほうがいいと思います。<br>その上で、問題は気候との関係性ですね。現地は空調コントロールされているので、おそらく20度台の快適なあたりだと思うんですが、お酒を飲んだり踊ると暑くなります。<br>一方で帰り道は今回は夜になるので、少し涼しくなる可能性もあります。汗をかいた状態だと思ったよりも寒くなってしまうこともあるので、適度な服選びが難しいところです。<br>薄いパーカーを腰巻きにしておくのは一つの策としては妥当な気はします。<br>ここに関しては私がかなり不得意なところで、先日明らかに寒い服装で帰り道しんどかったので、気をつけてください、という思いを込めています。</p>
 <p>替えの服を持っていくとかもありではあるものの、結局荷物がかさむのでどうするのがいいか悩ましいところ。<br>長袖であれば現地では腕まくれるので、よほどでなければ長袖安定な印象。生地の厚さで選んだほうがよさそう。<br>ちなみに意外と腕まくっても腕動かすと解けていくので、輪ゴム数個ポケットに突っ込んできてもいいのではと思ったり。</p>
@@ -56,6 +58,8 @@
 <p>おそらく椅子は存在しません。基本的にイベント中ずっと立ちっぱなしです。……と思っておくといいよねって感じで、もしかするとバーエリアを設営するとかはあるかもです。<br>床に座ったりするのは単に邪魔なのもありますが、体調が悪いのと区別がつかないからかスタッフに立つように促されると思います。<br>スニーカーとかより運動靴で、かつその靴に慣れておくとか、体力温存気味なスロースタートから始めるとかは大事かなと思います。<br>腕上げるのも結構疲れるけど、それよりは足のほうがかなりしんどかったので、普段デスクワークとか引きこもっているとかなり重要なポイントです（白目）</p>
 <h3 id="トイレ">トイレ</h3>
 <p>もはや普通の社会生活なんですけど、DJの交代タイミングとかで混んだりしがちなので、余裕を持っていきましょう。<br>……と言いたいんですけど、これ結構特殊で、お酒とかを買いに行って飲むタイミングでトイレに行くのが理想なんですよね。じゃないと、お酒飲んでフロアに戻って、またトイレに抜けて、またフロアに……ってなってしまってフロアを楽しむ時間が減ってしまうので。<br>絶対にフルでフロアに張り付きたいとき（推しDJが出るとか）は30分前くらいから準備する感覚で予定を立てておくとハッピーになれると思います。</p>
+<h3 id="shazam">Shazam</h3>
+<p>映像とかで使われている音楽聴いて調べたりする方にはおなじみですが、MU2022でもバリバリ使えると思います。<br>多種多様なDJ、アーティストが出るので、その中には知らない曲があるかもしれません。知っている曲でもメモを残したいことがあるかもしれません。<br>あとから聞き返すためにも用意しておいていいと思います。</p>
 
     <script src="theme.js"></script>
 </div>
