deploy: 9e7066eb10fc7673af4f2efa772f3b45a9998d86

--- a/music/play-djself-music.html
+++ b/music/play-djself-music.html
@@ -10,7 +10,7 @@
 <body class="dark">
 <div id="wrapper">
     <h1 id="djプレイとdj自身の楽曲について">DJプレイとDJ自身の楽曲について</h1>
-<p>オタククラブビギナー（10回ほど現場参加）なMarcoです<br>以前から書きたかったので、DJとして出演することとDJ自身の楽曲をかけることについて書きます<br>オタク系の音楽イベントという側面でも見ている部分はあるので、コンテンツ系ライブと関係性を持って書くはずです</p>
+<p>オタククラブビギナー（10回ほど現場参加）なMarcoです。<br>以前から書きたかったので、DJとして出演することとDJ自身の楽曲をかけることについて書きます。<br>オタク系の音楽イベントという側面でも見ている部分はあるので、コンテンツ系ライブと関係性を持って書くはずです。</p>
 <p>自分がクラブに期待している楽しさというのは、</p>
 <ul>
 <li>次の一曲を楽しみにし続けられる</li>
