deploy: a5d0c4c61981b68671dc02db5cca83f1c31f41de

--- a/diary/2021-02-14-01.html
+++ b/diary/2021-02-14-01.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-02-14版）">のーたいとる（2021-02-14版）</h1>
+    <h1 id="のーたいとる2021-02-14版">のーたいとる（2021-02-14版）</h1>
 <p>テスト代わりにちょっとこっちで書いてみるよ。書く内容はここの話。</p>
 <p>編集機能についてかなり悩んでいているのでどうしよう。SPAと純HTML主義は相容れない（厳密には極端にめんどくさい）ので、どちらを取るかという感じ。</p>
 <p>まあ名前の通りに文書を書くところなので、今回は純HTML主義に近づくようにCSS/JS無効化しても閲覧できるようにしたいですね。（流石に編集まで純HTMLにするのは後回し）</p>
