--- a/diary/2021-03-05-044100.html
+++ b/diary/2021-03-05-044100.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-03-05版）">のーたいとる（2021-03-05版）</h1>
+    <h1 id="のーたいとる2021-03-05版">のーたいとる（2021-03-05版）</h1>
 <blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr">寝るかといいつつ色々調べものをしていて、権利というものを意識するインターネットになってよかったんだよな、よかったんだよな？っていうすごく悩ましい思いになっている</p>&mdash; Marco (@Marco_utau) <a href="https://twitter.com/Marco_utau/status/1367552256363491331?ref_src=twsrc%5Etfw">March 4, 2021</a></blockquote>
 
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
