--- a/diary/2021-03-26-032010.html
+++ b/diary/2021-03-26-032010.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-03-26版）">のーたいとる（2021-03-26版）</h1>
+    <h1 id="のーたいとる2021-03-26版">のーたいとる（2021-03-26版）</h1>
 <ul>
 <li>今日はポエムだよ</li>
 </ul>
