--- a/diary/2021-03-31-011430.html
+++ b/diary/2021-03-31-011430.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-03-31版）">のーたいとる（2021-03-31版）</h1>
+    <h1 id="のーたいとる2021-03-31版">のーたいとる（2021-03-31版）</h1>
 <h2 id="おはよう">おはよう</h2>
 <p>そろそろ寝るよ</p>
 <h2 id="少しずつ趣味プロを取り戻すよ">少しずつ趣味プロを取り戻すよ</h2>
@@ -23,8 +23,7 @@
   isSuperDuperFullStackCreator: true,
   isBaby: true, // keeping current stuff xd
 }
-</code></pre>
-<h2 id="趣味プロ">趣味プロ</h2>
+</code></pre><h2 id="趣味プロ">趣味プロ</h2>
 <p>今はここのエディタ実装中。少しずつしか歩けてないのと自分向けの部分を作っているので、多分見る人にとっては最後まで微妙にUIが変わるだけで関係がないと思う。ぼくがぼくを褒めていかないとモチベがががが</p>
 
     <script src="../theme.js"></script>
