--- a/diary/2021-05-11-025200.html
+++ b/diary/2021-05-11-025200.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-05-11版）">のーたいとる（2021-05-11版）</h1>
+    <h1 id="のーたいとる2021-05-11版">のーたいとる（2021-05-11版）</h1>
 <p>あさ～なわけないだろ3時になるんだぞ。書きたいことがあったので書く。細かい経緯とかは <a href="https://twilog.org/Marco_utau/date-210511">twilogの2021-05-11あたり</a> を見てください。</p>
 <p>小中学生の頃は一応野球をやっていたこともあって運動はしていたし、多分今も運動自体が嫌いなわけじゃなくて、むしろどっちかというと好きな方だと思う。</p>
 <p>そんなことはどうでもよくて、小中学生の頃の自分に対してかわいそうだな、みたいな思いを抱いて、子育てというか、学ばせるということについてすごく思いがあって、そこに貢献したいという思いがある。</p>
