--- a/diary/2021-07-02-232600.html
+++ b/diary/2021-07-02-232600.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-07-02版）">のーたいとる（2021-07-02版）</h1>
+    <h1 id="のーたいとる2021-07-02版">のーたいとる（2021-07-02版）</h1>
 <p>何が書きたいかあんまり考えてないけど言葉を出したいと思ったので書くよ。ちなみにこの文章はあちこちオードリーを見ていて言葉を書きたいと思ったから書き始めた。</p>
 <p>ここ最近、少しずつ背伸びができるようになった気がしている。でもなんか、背伸びであって、ジャンプじゃないんですよね。これをなんと例えようか。ある程度狭い台座に乗っかると背伸びは結構できるけど、ジャンプは怖くて絶対できないみたいな、そういう怖さ。</p>
 <p>状況としては昨年の冬くらいに一人暮らしを初めて、4月から仕事が始まって、どっちもがんばろう！みたいな気持ちになっているところ。その中でこういう気持ちになっている。</p>
