--- a/diary/2021-07-18-205400.html
+++ b/diary/2021-07-18-205400.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-07-18版）">のーたいとる（2021-07-18版）</h1>
+    <h1 id="のーたいとる2021-07-18版">のーたいとる（2021-07-18版）</h1>
 <p>酒の話をします。</p>
 <p>RTDというか、いわゆるサクッと飲めるアルコールとそうじゃない重めの酒（度数とか）についてで、普通に生活する上だとやっぱり前者のほうが便利だよな〜って思うところがある。</p>
 <p>というのも、チューハイとかって3~10%くらいで350mlとか500ml単位で買えるのに対して、例えば日本酒だと15%以上で700mlあたりが最低ラインのものも多いんですよね。これはワインも同じだと思います。</p>
