--- a/diary/2021-07-19-002600.html
+++ b/diary/2021-07-19-002600.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-07-19版）">のーたいとる（2021-07-19版）</h1>
+    <h1 id="のーたいとる2021-07-19版">のーたいとる（2021-07-19版）</h1>
 <p>昨日に続いて２日連続！流石にまだ寝てないので論理同日！</p>
 <p>さあここではMarco3jpに関する話をしていきますわよ〜！（Marco3jpお嬢様）</p>
 <p>Marco3jpというのはIDで概念みたいなもので、Marcoというのが実体ってイメージ。</p>
