--- a/diary/2021-10-27-010000.html
+++ b/diary/2021-10-27-010000.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-10-27版）">のーたいとる（2021-10-27版）</h1>
+    <h1 id="のーたいとる2021-10-27版">のーたいとる（2021-10-27版）</h1>
 <p>アドベントカレンダーネタ出し</p>
 <h2 id="昨年の残留物">昨年の残留物</h2>
 <p><a href="https://adventar.org/calendars/5436">https://adventar.org/calendars/5436</a></p>
