--- a/diary/2022-02-08-010200.html
+++ b/diary/2022-02-08-010200.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2022-02-08版）">のーたいとる（2022-02-08版）</h1>
+    <h1 id="のーたいとる2022-02-08版">のーたいとる（2022-02-08版）</h1>
 <p>昔に、好きなことを仕事にするのはおすすめではない……みたいなことを聞いた記憶があって、最近になって部分的に咀嚼できた気がした。</p>
 <p>きっと好きなことを自分のためだけにやりたいなら、仕事ではできないんだろうなと。</p>
 <hr>
