--- a/diary/2022-05-03-234800.html
+++ b/diary/2022-05-03-234800.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2022-05-03版）">のーたいとる（2022-05-03版）</h1>
+    <h1 id="のーたいとる2022-05-03版">のーたいとる（2022-05-03版）</h1>
 <p>前半は今日の明け方（クラブ明け）に書いて、後半は投稿直前に書きました</p>
 <hr>
 <p>今日のクラブ、君の知らない物語がかかって最高だったんだけど、同時にその場で表現できることの限界を知ったというか、どれだけ良くても虚空に消えていく喜びを投げるような、そんな気持ちを少しだけ感じた。<br>あの場所にいた人たち、DJもそうだけど、多分あの瞬間は最高だったしみんなこの曲を聴いて盛り上がって楽しいと思ったとは思う。<br>けどそれだけというとそれだけで、これよりも楽しむ方法というか、これよりも良さを表現することは難しいのかもな〜と思った。<br>もちろんコミュニティとして、知り合いとかその場で知り合った人とショットを飲むとかいい曲を語るとか、そういう方向の楽しみ方はあるかもなと思ったんだけど、音楽を聴く場所としての楽しみ方はここから何があるのかなと思ったりした。<br>箱が変わったりしたら少しの違いはあると思うけど、極端な話、あの良さの本質ってなんだろなとか思うところはあった。</p>
