--- a/league-of-linux.html
+++ b/league-of-linux.html
@@ -11,7 +11,7 @@
 <div id="wrapper">
     <h1 id="league-of-linux-marco出張所">League of Linux Marco出張所</h1>
 <p><strong>いまのところ成功しておりません！！！</strong></p>
-<h2 id="これはなに？">これはなに？</h2>
+<h2 id="これはなに">これはなに？</h2>
 <ul>
 <li>League of Legends という <del>異常</del> ゲームはプレイヤーが <del>おかしなほどに</del> 多すぎるのでLinuxでプレイしたいという人も一定数いる</li>
 <li>そのためRedditを中心にLinuxプレイヤーコミュニティーがひっそりと存在し、公式からも認知されている<ul>
@@ -84,7 +84,7 @@
 <ul>
 <li>日本サーバーや韓国サーバー（マルチバイトサーバー？）において同様の現象が発生するらしい<ul>
 <li><a href="https://www.reddit.com/r/leagueoflinux/comments/wg3qe2/cannot_enter_game_on_japanese_server_but_normal/">https://www.reddit.com/r/leagueoflinux/comments/wg3qe2/cannot_enter_game_on_japanese_server_but_normal/</a></li>
-<li><a href="https://www.reddit.com/r/leagueoflinux/comments/w9nz5s/comment/ii3ppc4/?utm_source=reddit&amp;utm_medium=web2x&amp;context=3">https://www.reddit.com/r/leagueoflinux/comments/w9nz5s/comment/ii3ppc4/?utm_source=reddit&amp;utm_medium=web2x&amp;context=3</a></li>
+<li><a href="https://www.reddit.com/r/leagueoflinux/comments/w9nz5s/comment/ii3ppc4/?utm_source=reddit&utm_medium=web2x&context=3">https://www.reddit.com/r/leagueoflinux/comments/w9nz5s/comment/ii3ppc4/?utm_source=reddit&amp;utm_medium=web2x&amp;context=3</a></li>
 </ul>
 </li>
 <li>言語の問題？とのことではあるが、インゲームクライアントの言語をどうにか英語にしてみても変わらず<ul>
