--- a/primagi/thoughts/ep001.html
+++ b/primagi/thoughts/ep001.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="ワッチャプリマジ！-第1話「いっしょにプリマジしよ！」">ワッチャプリマジ！ 第1話「いっしょにプリマジしよ！」</h1>
+    <h1 id="ワッチャプリマジ-第1話いっしょにプリマジしよ">ワッチャプリマジ！ 第1話「いっしょにプリマジしよ！」</h1>
 <h2 id="ちゃんと感想書くところ">ちゃんと感想書くところ</h2>
 <p>書くよ</p>
 <h2 id="見ながら雑に書いたやつ">見ながら雑に書いたやつ</h2>
