--- a/primagi/thoughts/ep004.html
+++ b/primagi/thoughts/ep004.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="ワッチャプリマジ！-第4話「コンビ解散！？マジ早すぎだよ～！」の感想">ワッチャプリマジ！ 第4話「コンビ解散！？マジ早すぎだよ～！」の感想</h1>
+    <h1 id="ワッチャプリマジ-第4話コンビ解散マジ早すぎだよの感想">ワッチャプリマジ！ 第4話「コンビ解散！？マジ早すぎだよ～！」の感想</h1>
 <h2 id="ちゃんと感想書くところ">ちゃんと感想書くところ</h2>
 <p>多分書くよ</p>
 <h2 id="見ながら雑に書いたやつ">見ながら雑に書いたやつ</h2>
