--- a/primagi/thoughts/ep005.html
+++ b/primagi/thoughts/ep005.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="ワッチャプリマジ！-第5話「みてみて！かわいい×２-みるきだおは～と」の感想">ワッチャプリマジ！ 第5話「みてみて！かわいい×２ みるきだお(は～と)」の感想</h1>
+    <h1 id="ワッチャプリマジ-第5話みてみてかわいい２-みるきだおはとの感想">ワッチャプリマジ！ 第5話「みてみて！かわいい×２ みるきだお(は～と)」の感想</h1>
 <h2 id="ちゃんと書く">ちゃんと書く</h2>
 <p>はず</p>
 <h2 id="雑に書く">雑に書く</h2>
