--- a/primagi/thoughts/ep018.html
+++ b/primagi/thoughts/ep018.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="ワッチャプリマジ！-第18話「あまねの心、秘密の花園」の感想">ワッチャプリマジ！ 第18話「あまねの心、秘密の花園」の感想</h1>
+    <h1 id="ワッチャプリマジ-第18話あまねの心秘密の花園の感想">ワッチャプリマジ！ 第18話「あまねの心、秘密の花園」の感想</h1>
 <h2 id="まえおき">まえおき</h2>
 <p>回としてはネタ要素とあまね要素に分離できる。</p>
 <p>内容の主軸は後者にあるはずなのに前者がかなり比率高めで、うまく後者を認識できない形になっている。</p>
