--- a/ss/2021-11-11-235330.html
+++ b/ss/2021-11-11-235330.html
@@ -21,7 +21,7 @@
 <p>「ねえ、みゃむちゃん。この景色を見てどう思ってる？」<br>まつりは街を見下ろす高台から、始まってしまった戦いを望んでみゃむに問いかける。<br>「……まったくチュッピは馬鹿なんだな。マジがないチュッピがマナマナを打ち負かすことなんてできるわけがないんだぞ」<br>「でも、みゃむちゃんはこの世界を変えたくない？ みんなが平等で平和で幸せになれるような世界に……」<br>みゃむは黙り込んでしまう。<br>それはそうだ。<br>彼女はみゃむであってみゃむではない。<br>彼女が愛したマナマナはもういないのだ。<br>「……もし、そんな世界があるなら……」<br>「うん？」<br>「……きっとマナマナが一番喜ぶと思うんだぞ。だから、そのためにはどんなことでもするんだぞ！」<br>「ふーん、そうかなあ……。まあいっか！ じゃあみゃむちゃん、これからよろしくね！」こうして、みゃむとまつりの戦いが始まったのだった。</p>
 <hr>
 <p>「うわあああっ！！」<br>「きゃああっ！？」<br>「たすけてえええっ！！！」<br>数少なくなってしまったマナマナがチュッピに防戦一方を強いられる中、みゃむは前線で身を張っていた。<br>「くそっ、このままでは勝てる気がしないぞ！！……こうなったら奥の手を使うしかないか……」<br>みゃむが何かを口にすると、彼女の身体に異変が起こる。<br>肌の色が変化していき、耳や尻尾が伸びていく。<br>そして、髪色が金色に変わり、瞳孔が縦長になっていった。<br>その姿を見たチュッピたちが騒ぎ出す。<br>「あれはまさか……伝説の獣人族なのか！？」<br>「まずいぞ……あいつからマジが検出できない。これじゃあ対マジ技術が全く効かない！」<br>この戦いでチュッピが優勢になったのは、紛れもなく対マジ技術によるものであった。<br>チュッピはあの事件から静観していたように見えたが、その裏ではみゃむの育ての親であったニャン爺のマジ封じを研究していたのだ。<br>電磁波によってマジの放出を極限に抑えることで、従来マジが使えたものの力はまるで発揮できず、せいぜいペンを持ち上げる程度が精一杯であった。<br>みゃむはコントロールできないほどの極端なマジを持ち合わせていたため、対マジ技術によってかえってコントロール可能になっていたのだ。<br>しかしマナマナはマジに頼っていたことから兵器もなく、圧倒的な戦力差によってみゃむのマジではチュッピを抑えきれなかった。<br>「へえ、これが本当の姿ってことか。なかなか可愛いじゃないか」<br>「うるさい！ お前なんかに褒められても嬉しくないぞ！」<br>「さっきまでの威勢の良さはどこに行ったんだよ。ほら、かかってこいよ」<br>「ふざけるなああぁっ！！」怒りに任せてみゃむは爪を振り下ろす。<br>しかし、その攻撃は簡単に避けられてしまう。<br>そのまま腕を捕まえられてしまい、地面に叩きつけられた。<br>地面はひび割れ、衝撃で土煙が上がる。<br>それでもなお、みゃむは諦めずに立ち上がった。<br>その時、上空から大きな影が現れる。<br>見上げた先にいたのは巨大な鳥のような怪物だ。<br>それはかつてマナマナを苦しめた機械兵であり、今はマナマナの最後の切り札となっていた。<br>そして、みゃむにとって最も憎むべき存在でもあった。<br>機械兵は鋭い嘴を開き、エネルギーを溜め</p>
-<h2 id="元ネタ？">元ネタ？</h2>
+<h2 id="元ネタ">元ネタ？</h2>
 <ul>
 <li>以下のスレッド</li>
 </ul>
