--- a/diary/2021-03-03-025210.html
+++ b/diary/2021-03-03-025210.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-03-03版）">のーたいとる（2021-03-03版）</h1>
+    <h1 id="のーたいとる2021-03-03版">のーたいとる（2021-03-03版）</h1>
 <p>労働とコミュニケーション、現状だと切っても切り離せないので、労働時間の自由さやらオンライン化はコスト増加と働きやすさのトレードオフという気がしていて、もっと議論されていいんじゃないかと思うんだけどどうなんだろう。</p>
 <p>ソフトウェア開発の根幹が、『未来は見えない』にあるので、特に労働時間の自由さには向いていないような気がするんですよね。コミュニケーションを減らして作業するとなると、タスク内に必要な情報をすべて集めておく必要があって、着手してから誰かに確認することなく完了に至る必要がある。つまり、実装時（他のタスクであっても作業時）になんの情報が必要であるかを洗い出す必要がある。</p>
 <p>と思ったんだけど、つまりそれって属人化しているとか、合意が取れていないor結論が出ていない仕様が作業タスクに上がっているということなので、根本的に組織設計が誤っているというだけなのかもしれない。</p>
