--- a/diary/2021-07-23-225000.html
+++ b/diary/2021-07-23-225000.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2021-07-23版）">のーたいとる（2021-07-23版）</h1>
+    <h1 id="のーたいとる2021-07-23版">のーたいとる（2021-07-23版）</h1>
 <p>多様性って、多様性について語っているうちは多様性になれないというか、多様であることと多様でないことは表裏一体であって同時にあれないのに、多様であるためには両面満たすべきでは？という疑問がある。</p>
 <p>もちろん理不尽に処遇を変えられるみたいなことがあってはいけないし、それぞれがそれぞれとして存在するべきだと思っているんだけど、多様じゃないといけないよね！多様が正しいよ！ってなってしまった世界では個が尊重されるよりもカテゴライズが尊重されるんだろうなという気持ち。</p>
 <p>オリンピック開会式見てるんですけど、なんかこの規模の国際イベントで政治とかいろいろを表舞台から消そうとする気持ちはすごいなあと思う。</p>
