--- a/diary/2022-07-18-053800.html
+++ b/diary/2022-07-18-053800.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2022-07-18版）">のーたいとる（2022-07-18版）</h1>
+    <h1 id="のーたいとる2022-07-18版">のーたいとる（2022-07-18版）</h1>
 <p>ああ、あの数年間は私に何を残したんだろう<br>Googleマップにも、ハードディスクにも、たった数百キロバイトのテキストしか残っていなくて、あの日見た景色、あの日聞いた声、交わした言葉、その全てが残っていなくて<br>私の知らないところで起こったその全て、私の知らない物語を含めて、全て、知りたいんだ。</p>
 
     <script src="../theme.js"></script>
