--- a/diary/2023-04-03.html
+++ b/diary/2023-04-03.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="のーたいとる（2023-04-03版）">のーたいとる（2023-04-03版）</h1>
+    <h1 id="のーたいとる2023-04-03版">のーたいとる（2023-04-03版）</h1>
 <p>知ってもらえるのかなって思って、ポジティブなツイートが増えた気がする<br>知ってもらえないとわかっていて、部屋で独り言が増えた気がする<br>インターネットに生きていては知らない世界を知ったんだろう<br>人間はそこに居たんだ</p>
 <hr>
 <p>怪文書を書いていて、我ながらとても好きな文章が生まれてしまったので</p>
