--- a/preparing-for-MU2022.html
+++ b/preparing-for-MU2022.html
@@ -21,8 +21,7 @@
 <pre><code>- 入場時にご本人確認を実施する場合がございます。必ず「顔写真付き身分証明書」をご持参ください。
 - 会場常設のコインロッカーはご利用可能ですが、数に限りがございます。またクロークのご用意はございませんので、大きな荷物はお持ち込みいただかないようお願いいたします。
 - 体を必要以上に大きく動かしたり、大きく飛び跳ねる行為、前へ駆け出したりする行為は禁止とさせていただきます。
-</code></pre>
-<p>あとは箱にもよるかもだけど、『迷惑かけたらちゃんと謝る』は鉄板。<br>少し腕が当たってしまったとか盛り上がって混んでる場所とかだとあるあるだと思うんですけど、移動しようと思って歩いていたら思いっきり殴られたとか意図せず発生しがちな気はするので、多少のことはしゃーないと受け止める気持ちでいきましょう。<br>とはいえ自分が殴ってしまった側になると相手によるので、ちゃんと注意することも大事です。<br>レギュレーションも部分的に関係があって、MU2022だと記載のように動きまくったりめっちゃ飛んだりはNGなので気をつけましょう。（適度に飛びましょう（？））</p>
+</code></pre><p>あとは箱にもよるかもだけど、『迷惑かけたらちゃんと謝る』は鉄板。<br>少し腕が当たってしまったとか盛り上がって混んでる場所とかだとあるあるだと思うんですけど、移動しようと思って歩いていたら思いっきり殴られたとか意図せず発生しがちな気はするので、多少のことはしゃーないと受け止める気持ちでいきましょう。<br>とはいえ自分が殴ってしまった側になると相手によるので、ちゃんと注意することも大事です。<br>レギュレーションも部分的に関係があって、MU2022だと記載のように動きまくったりめっちゃ飛んだりはNGなので気をつけましょう。（適度に飛びましょう（？））</p>
 <h2 id="持ち物">持ち物</h2>
 <p>個人的にはこれが一番重要で、落とし穴だな〜と感じたところ。<br>まずフロアには持ち物を極限まで減らした状態で入るのが大事。そもそも大きな荷物だとスタッフになにか言われるかもしれないんだけど、小さな荷物にしても楽しむのにはちょっと邪魔になるかも。</p>
 <p>ざっくりですが、現場までの荷物、現場内での荷物の2フェーズに分かれているイメージ。<br>現場までの荷物はコインロッカーに入り切るもの、現場内での荷物は極限に減らした状態、という感じですね。<br>スーツケースとかなるとクロークに預けるしかなかったりですが、MU2022だとクロークはないと記載されているので、遠出であれば現地以外のなにか（ホテルの預かりを使うとか）で対応する必要があります。<br>そもそも今回はコインロッカーも限界はある（まあ空港なのでイベント専用ではなくて予測できない、という意味だと思います）ので、なるべく家からものを持っていかないほうがいいですね。（最悪現地調達で）</p>
