--- a/ss/2021-08-02-204300.html
+++ b/ss/2021-08-02-204300.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dark">
 <div id="wrapper">
-    <h1 id="ショートストーリー（2021-08-02）">ショートストーリー（2021-08-02）</h1>
+    <h1 id="ショートストーリー2021-08-02">ショートストーリー（2021-08-02）</h1>
 <p>「このイベントは我々のゲリラ対象となった。あの部屋に五分ほど滞在してもらい、その後は開放するだけなので安心してもらいたい」</p>
 <p>社会をさらなる混乱に貶めるのにはたった五分でよかった。三年が経ち、一層強力に、一層感染力が強まった新型コロナウイルスの感染者さえいれば。</p>
 <hr>
