--- a/dream-goes-on-after-the-all-night-irori-vol1.html
+++ b/dream-goes-on-after-the-all-night-irori-vol1.html
@@ -15,8 +15,8 @@
 <ul>
 <li>私より詳しい方、ここがちょっと気になるな……って方は、ぜひとも記事やツイートで「このイベントはこんな感じだよ！」とか「（地域名）ではこんなイベントあるよ！」とか、様々な布教活動をよろしくお願いします
 <ul>
-<li>なお、せんせえ（名取さなさんのファンの名称）同士は<strong>馴れ合い禁止</strong>という掟がありまして、一部のカルチャー的には困惑もあるかと思いますが、様々な理由から極めて重要な掟なので、酒が飲みたくない人に酒を飲ませないのと同様に、“せんせえ同士”の馴れ合い禁止という考えを尊重していただけると幸いです</li>
-<li>これはあなたがせんせえでないなら、例えば”せんせえを引き合わせる（君たち同じコンテンツのオタクじゃん！話合うじゃん！的な）“行為を注意してね、という話であって、あなたとせんせえが仲良くすることを咎めるものではないです</li>
+<li>なお、せんせえ（名取さなさんのファンの名称）同士は<strong>馴れ合い禁止</strong>という掟があります</li>
+<li>一部のカルチャー的には困惑もあるかと思いますが、様々な理由から極めて重要な掟となっています。そんなことなので、酒が飲みたくない人に酒を飲ませないのと同様に、“せんせえ同士”の馴れ合い禁止という考えを尊重していただけると幸いです</li>
 </ul>
 </li>
 </ul>
