deploy: df974fc4e5aad6c05661ff13a6c4a7efbe3ebd88

--- a/dream-goes-on-after-the-all-night-irori-vol1.html
+++ b/dream-goes-on-after-the-all-night-irori-vol1.html
@@ -7,18 +7,8 @@
 </ul>
 <h2 id="免責事項">免責事項</h2>
 <ul>
-<li>私はMOGRA関係者でもなく、毎週イベントに参加したり配信を見るほどのオタクでもないです</li>
-<li>月に1回行くかいかないかくらいなので、ここで紹介する多くのイベントには参加したことがありません</li>
+<li>私は月1回くらいイベントに行く程度なので、ここで紹介するイベントの多くには参加したことがありません</li>
 <li>あくまでせんせえ方が<a href="https://club-mogra.jp/event/">MOGRAのスケジュール</a>を見るときの参考になる程度の情報を届けるためのものです</li>
-</ul>
-<h3 id="詳しい人宛">詳しい人宛</h3>
-<ul>
-<li>私より詳しい方、ここがちょっと気になるな……って方は、ぜひとも記事やツイートで「このイベントはこんな感じだよ！」とか「（地域名）ではこんなイベントあるよ！」とか、様々な布教活動をよろしくお願いします
-<ul>
-<li>なお、せんせえ（名取さなさんのファンの名称）同士は<strong>馴れ合い禁止</strong>という掟があります</li>
-<li>一部のカルチャー的には困惑もあるかと思いますが、様々な理由から極めて重要な掟となっています。そんなことなので、酒が飲みたくない人に酒を飲ませないのと同様に、“せんせえ同士”の馴れ合い禁止という考えを尊重していただけると幸いです</li>
-</ul>
-</li>
 </ul>
 <h2 id="アニメ系イベント">アニメ系イベント</h2>
 <h3 id="アニソンインデックス">アニソンインデックス</h3>
